11.12.2016
- changed torrent download path to ~/Downloads
- table width optimize to terminal width
- changed displayed size of torrents to Mb
- perldoc

12.12.2016
- fixed table width
- saving only if key is in range a-o
- added Encode module, fix for Unicode characters ..'wide char in print...'

13.12.2016
- POSIX exports only ceil()
- linux & ubuntu opens with nohup xdg-open
- fixed seeds limits
- added option -A -B -C to pick result from command line

16.12.2016
- POSIX termios_h loading with eval/require in case we're on MSWin32 or msys

